removed,moved,renamed faulty content. added code to stop text overflow in col. also added more images to top slider on previous commit. trie dto fix centering issue. increased input box length under class control

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,3 +154,21 @@ body {
 .stand-out-this {
     color: #319fa6
 }
+
+/* Code from Stackoverflow - Philip Feldmann */
+/* Keep text from overspilling out of columns */
+.keep-insideBSol
+{
+    -moz-hyphens:auto;
+    -ms-hyphens:auto;
+    -webkit-hyphens:auto;
+    hyphens:auto;
+    word-wrap:break-word;
+ }
+
+
+ .ipb-width{
+
+width: 50%;
+
+ }
